# unified-memory-framework

./: CMakeLists.txt  README.md  gdb.cmd  vcpkg.json
.github/docker/: ubuntu-20.04.Dockerfile  ubuntu-22.04.Dockerfile
.github/workflows/: basic.yml  benchmarks.yml  codeql.yml  coverage.yml  fast.yml  nightly.yml  nightly_looped_sanitizers.yml  pr_push.yml  proxy_lib.yml  qemu.yml  reusable_basic.yml  reusable_compatibility.yml  reusable_dax.yml  reusable_fast.yml  reusable_gpu.yml  reusable_multi_numa.yml  reusable_proxy_lib.yml  reusable_qemu.yml  reusable_sanitizers.yml  reusable_sycl.yml  reusable_valgrind.yml  sanitizers.yml  weekly.yml
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark.hpp  benchmark_umf.hpp  multithread.cpp  ubench.c
cmake/: FindLIBHWLOC.cmake  FindLIBTBB.cmake  cmake_uninstall.cmake.in  helpers.cmake
examples/: CMakeLists.txt
examples/basic/: include.cmake  ipc_shared_memory.sh  ipc_shared_memory_client.c  ipc_shared_memory_server.c
examples/dram_and_fsdax/: CMakeLists.txt
examples/fetch_content/: find_umf.cmake
examples/ipc_ipcapi/: CMakeLists.txt  find_umf.cmake
examples/level_zero_shared_memory/: CMakeLists.txt
include/umf/: base.h  ipc.h  memory_pool.h  memory_provider.h  memory_provider_ops.h
include/umf/providers/: provider_coarse.h  provider_file_memory.h  provider_fixed_memory.h  provider_os_memory.h
scripts/coverage/: coverage_capture.sh  merge_coverage_files.sh
scripts/qemu/: run-build.sh  run-tests.sh  start_qemu.sh
src/: CMakeLists.txt  ipc.c  ipc_cache.c  libumf.c  libumf.def  libumf.h  libumf.map  libumf_linux.c  memory_pool.c  memory_provider.c  topology.c  tracker.c  tracker.h
src/base_alloc/: base_alloc.c  base_alloc_global.c  base_alloc_linear.c
src/coarse/: CMakeLists.txt  coarse.c  coarse.h
src/common/: common.h
src/critnib/: critnib.c  critnib.h
src/memory_targets/: memory_target_numa.c
src/memspaces/: memspace_highest_bandwidth.c  memspace_highest_capacity.c  memspace_lowest_latency.c
src/pool/: CMakeLists.txt  pool_disjoint.c  pool_disjoint_internal.h  pool_jemalloc.c  pool_proxy.c  pool_scalable.c
src/provider/: provider_coarse.c  provider_cuda.c  provider_devdax_memory.c  provider_devdax_memory_internal.h  provider_file_memory.c  provider_fixed_memory.c  provider_level_zero.c  provider_os_memory.c  provider_os_memory_internal.h  provider_os_memory_linux.c  provider_os_memory_macosx.c  provider_os_memory_posix.c  provider_os_memory_windows.c  provider_tracking.c  provider_tracking.h
src/proxy_lib/: CMakeLists.txt  proxy_lib.c  proxy_lib.def  proxy_lib.map
src/uthash/: uthash.h
src/utils/: CMakeLists.txt  utils_common.h  utils_concurrency.h  utils_level_zero.cpp  utils_linux_common.c  utils_load_library.c  utils_load_library.h  utils_macosx_common.c  utils_posix_common.c  utils_posix_concurrency.c  utils_windows_common.c  utils_windows_concurrency.c
test/: CMakeLists.txt  coarse_lib.cpp  disjointCoarseMallocPool.cpp  ipcAPI.cpp  ipcFixtures.hpp  ipc_devdax_prov.sh  ipc_devdax_prov_consumer.c  ipc_jemalloc_file.cpp  malloc_compliance_tests.cpp  memoryPoolAPI.cpp  poolFixtures.hpp  provider_coarse.cpp  provider_devdax_memory.cpp  provider_devdax_memory_ipc.cpp  provider_file_memory.cpp  provider_file_memory_ipc.cpp  provider_fixed_memory.cpp  provider_fixed_memory_ipc.cpp  provider_os_memory.cpp  provider_tracking.cpp  provider_tracking_fixture_tests.cpp  test_ba_fi.sh  test_base_alloc_linear.cpp  test_init_teardown.c  test_installation.py  test_proxy_lib.cpp
test/common/: provider.hpp  provider_null.c  provider_trace.c  test_helpers.cpp  test_helpers.h  test_helpers.hpp
test/memspaces/: memspace_host_all.cpp
test/pools/: disjoint_pool.cpp  ipc_jemalloc_devdax.cpp  ipc_scalable_devdax.cpp  jemalloc_coarse_devdax.cpp  jemalloc_coarse_file.cpp  jemalloc_pool.cpp  jemalloc_pool_coarse_file.cpp  pool_coarse_devdax.hpp  scalable_coarse_devdax.cpp  scalable_coarse_file.cpp  scalable_pool.cpp
test/providers/: cuda_helpers.cpp  provider_level_zero.cpp
test/supp/: drd-umf_test-ipc.supp  drd-umf_test-provider_file_memory_ipc.supp  drd-umf_test-provider_os_memory.supp  helgrind-umf_test-ipc.supp  helgrind-umf_test-provider_file_memory_ipc.supp
